crates/rustynes-test-harness/tests/snapshots/external_extended__extended_m35_warioland_ii.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
expression: text
---
rom=mapper-035-JYCompany35/Warioland II (Unl).zip
rom_sha256=52dfe6aee6abf9e607cf564a3449a770f4c6099c07e87e95d5240692e19ff973
frames=600
fb_bytes=245760
cycles=17838620
audio_samples=439526
audio_fnv1a64=7f2d3a68e80a2efe
checkpoint f600 fb_fnv1a64=89ee4c476c97a325
