crates/rustynes-test-harness/tests/snapshots/external_extended__extended_m40_super_mario_bros_2.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
expression: text
---
rom=mapper-040-NTDEC2722/Super Mario Bros 2 (Lost Levels) (Unl).nes
rom_sha256=4ad5147b11c53cadb677a28432c64cbe4409a4517f581ba9d8447eafc71f1db6
frames=600
fb_bytes=245760
cycles=17838527
audio_samples=439524
audio_fnv1a64=dda9e74ae2696052
checkpoint f600 fb_fnv1a64=2fb63d276ff4c325
