crates/rustynes-test-harness/tests/snapshots/external_extended__extended_m52_2_in_1_1996_super_hik_gold_card.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
expression: text
---
rom=mapper-052-MarioParty7in1/2-in-1 - 1996 Super HIK Gold Card (NT-803) [p1][!].zip
rom_sha256=ec26a60865f6419fd9c069b98a94791999603ed619d7410b4f2380ec2f21c80c
frames=600
fb_bytes=245760
cycles=17838521
audio_samples=439524
audio_fnv1a64=e92ecd223b1626cb
checkpoint f600 fb_fnv1a64=5b305cccc4e6a55f
