crates/rustynes-test-harness/tests/snapshots/external_extended__extended_m56_super_mario_bros_3.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
expression: text
---
rom=mapper-056-KaiserKS202/Super Mario Bros. 3 (J) (PRG1) [p2][!].zip
rom_sha256=7c8742b996688be255e8286d08b7b70fbcea930bec0b50a496ad049712b2aca3
frames=600
fb_bytes=245760
cycles=17838522
audio_samples=439524
audio_fnv1a64=dda9e74ae2696052
checkpoint f600 fb_fnv1a64=4c6514bf6dc90547
